  the frameset doesn't fit into the frames anymore
- Started writing a dialog for configuring frames and framesets. Currently
  it's possible to set the text run-around type for frames and the above
  described property for framesets

Reggie, 27.10.1998:
-------------------
- Implemented Run Around Gap
- Added the possibility to set the Run Around Gap for each frame
  with the frame setting dialog

Reggie, 1.11.1998:
------------------
- Lots of fixes
- It's possible to choose the editing mode with the toolbar and menu now

Reggie, 2.11.1998:
------------------
- Fixed a bug when loading files with more than one framesets
- Some fixes in the toolbars

Reggie, 3.11.1998:
------------------
- Started implementing creating textframes with the mouse. It already works somehow.

Reggie, 4.11.1998:
------------------
- Fixed some bugs with moving/resizing frames
- Inserting text frames works now (quite :-) correctly
- When changing something with frames/framesets they get updated correctly now

Reggie, 5.11.1998:
------------------
- Implemented inserting freely placeable pictures (picture frames)
- Some fixes with moving/resizing frames again
- Implemented printing of freely placeable pictures too
- Fixed a redraw-bug when scrolling the canvas

Reggie, 6.11.1998:
------------------
- Replaced all QRect, QSize and QPoint with KRect, KSize, KPoint. This fixes
  lots of calculation bugs with long documents.
- Fixed another bug with resizing frames

Reggie, 7.11.1998:
------------------
- Implemented saving/loading picture frames (currently it only saves filenames)
- Fixed many, many bugs

Reggie, 12.11.1998:
-------------------
- Scrolling is faster now (esp. for long documents)

Reggie, 14.11.1998:
-------------------
- ptYEnd is set correctly for each paragraph now
- setting the text cursor with the mouse and selecting text with the mouse is faster for long textes now
- started implementing style templates
- the number of pages is calculated correctly now